openapi scheme | some fixes
